[package]
name = "cache-server"
version = "0.1.0"
edition = "2018"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies.in-memory-cache]
version = "0.1.0"
path = "../in-memory-cache"

[dependencies.actix-web]
version = "4.0.0-beta.9"

[dependencies.futures]
version = "0.3"

[dependencies.bytes]
version = "1.1"

[dependencies.anyhow]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.tonic]
version = "0.5"

[dependencies.prost]
version = "0.8"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[build-dependencies.anyhow]
version = "1"

[build-dependencies.tonic-build]
version = "0.5"

[profile.release]
lto = false
