[package]
name = "cache-server"
version = "0.1.0"
edition = "2021"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies.in-memory-cache]
version = "0.3.0"
git = "https://github.com/zeljic/in-memory-cache.git"

[dependencies.actix-web]
version = "4.0.0-beta.13"

[dependencies.futures]
version = "0.3"

[dependencies.bytes]
version = "1.1"

[dependencies.anyhow]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.tonic]
version = "0.6"

[dependencies.prost]
version = "0.9"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.config]
version = "0.11"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.9"

[build-dependencies.anyhow]
version = "1"

[build-dependencies.tonic-build]
version = "0.6"

[profile.release]
lto = false
