[package]
name = "cache-server"
version = "0.1.0"
edition = "2021"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies.in-memory-cache]
version = "0.4.0"
git = "https://github.com/zeljic/in-memory-cache.git"

[dependencies.actix-web]
version = "4.2.1"

[dependencies.futures]
version = "0.3"

[dependencies.bytes]
version = "1.2"

[dependencies.anyhow]
version = "1"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.tonic]
version = "0.8"

[dependencies.prost]
version = "0.11"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.config]
version = "0.13"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.9"

[build-dependencies.anyhow]
version = "1"

[build-dependencies.tonic-build]
version = "0.8"

[profile.release]
lto = false
